# pyck

./: .gitignore  Brazilian_Test_Structured.py  CMakeLists.txt  Doxyfile  README.md  boundingBox.cpp  boundingBox.h  bt_Parameters.xml  cubicPacker.i  cuboid.cpp  cuboid.h  cylindricalPacker.cpp  cylindricalPacker.h  domain.cpp  domain.h  doubleField.cpp  doubleField.h  doxy2swig.py  ellipsoidalPacker.cpp  ellipsoidalPacker.h  elliptic_integral_firstform.cpp  elliptic_integral_secondform.cpp  fccPacker.h  intField.cpp  intField.h  license.txt  makedoc  model.cpp  model.h  pack.cpp  pack.h  pack.i  packPYTHON_wrap.c  packer.cpp  packer.h  progressBar.cpp  progressBar.h  pyck.cpp  pyck.h  pyck.i  (+8 more)
examples/: 2d_symmetric_cylinder_hcp.py  2dhello.py  2dinverted.py  Beam_Bending.py  Brazilian_Test_Circular.py  Brazilian_Test_Circular_3D.py  Brazilian_Test_Structured.py  Brazilian_Test_Structured_3D.py  Brazilian_joint.py  HFInsitu.py  PennyShaped3D.py  Triprism_test.py  UCS_joint.py  UCS_joint2.py  UCS_two_flaws.py  combining_packs_into_one_model.py  compositeShape.py  convexTest.py  cylindrical.py  ellipsoidal.py  fieldCallback.py  hello.py  hello_old_notworking.py  offset.py  periodic.py  pyShape.py  read_csv.py  stl_test.py  tibia_low.stl
examples/FS_hole/: FS_hole.py
examples/FS_hole_test/: FS_hole_test.py
examples/HFInsituTest/: HFInsitu.py  HFInsituTest.py
install/unix/: set_pyck_env.sh
install/windows/: pyck.template.in
pack/: CMakeLists.txt  cylindricalPacker.cpp  cylindricalPacker.h  ellipsoidalPacker.cpp  ellipsoidalPacker.h  elliptic_integral_firstform.cpp  elliptic_integral_secondform.cpp  old_ellipsoidalPacker.cpp  old_ellipsoidalPacker.h  packer.cpp  packer.h  structuredPack.cpp  structuredPack.h
pack/packers/: CMakeLists.txt  bccPacker.cpp  bccPacker.h  cubicPacker.cpp  cubicPacker.h  fccPacker.cpp  fccPacker.h  hcp2dPacker.cpp  hcp2dPacker.h  hcpPacker.cpp  hcpPacker.h
packers/: CMakeLists.txt  bccPacker.cpp  bccPacker.h  cubicPacker.cpp  cubicPacker.h  cubicPacker.i  cubicPackerPYTHON_wrap.cxx  fccPacker.cpp  fccPacker.h  hcpPacker.cpp  hcpPacker.h
pyck_utils/: computeMass_utils.py  pyck_utils.py
shapes/: CMakeLists.txt  compositeShape.cpp  compositeShape.h  convexhull2D.cpp  convexhull2D.h  cuboid.cpp  cuboid.h  cylinder.cpp  cylinder.h  pyShape.cpp  pyShape.h  sphere.cpp  sphere.h  stlShape.cpp  stlShape.h  triprism.cpp  triprism.h
swig/: CMakeLists.txt  cylindricalPacker.i  doc.i  ellipsoidalPacker.i  model.i  pack.i  pyck.i
swig/pack/: cylindricalPacker.i  ellipsoidalPacker.i  structuredPack.i
swig/pack/packers/: bccPacker.i  cubicPacker.i  fccPacker.i  hcp2dPacker.i  hcpPacker.i
swig/packers/: bccPacker.i  cubicPacker.i  fccPacker.i  hcpPacker.i
swig/shapes/: compositeShape.i  convexhull2D.i  cuboid.i  cylinder.i  pyShape.i  sphere.i  stlShape.i  triprism.i
swig/writers/: asciiWriter.i  binaryWriter.i  sparkWriter.i  verditeWriter.i
writers/: CMakeLists.txt  asciiWriter.cpp  asciiWriter.h  base64.cpp  base64.h  binaryWriter.cpp  binaryWriter.h  sparkWriter.cpp  sparkWriter.h  verditeWriter.cpp  verditeWriter.h
