FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(pyck.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(pyck.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(pyck python pyck.i)
SWIG_LINK_LIBRARIES(pyck ${PYTHON_LIBRARIES})
SWIG_LINK_LIBRARIES(pyck ${pyckLibs})

install(TARGETS _pyck DESTINATION ${INSTALL_DEST})